--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,19 +50,34 @@
 }
 
 .square {
-  width: 50px;
-  height: 50px;
-  border: 3px solid black;
+  width: 100px;
+  height: 100px;
+  border: 5px solid black;
+  border-radius: 5px;
 }
+
 #red {
   background-color: red;
+}
+#red:active {
+  background-color:  #dd0000;
 }
 #blue {
   background-color: blue;
 }
+#blue:active{
+  background-color: #0000dd;
+}
+
 #green {
   background-color: green;
 }
+#green:active {
+  background-color: #007000;
+}
 #yellow {
   background-color: yellow;
+}
+#yellow:active {
+  background-color: #dddd00;
 }
